# bomberman

./: Cargo.toml  README.md  flake.nix  justfile
src/: bomb.rs  main.rs  obstacle.rs  player.rs
